--- a/src/Components/Repositories.css
+++ b/src/Components/Repositories.css
@@ -63,3 +63,34 @@ li:hover {
         width: 90%;
     }
 }
+
+.container {
+    position: relative;
+    text-align: center;
+}
+
+.loading-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(255, 255, 255, 0.2);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+}
+
+.loading-spinner {
+    background: url('/beer.png') no-repeat center center;
+    background-size: contain;
+    width: 200px;
+    height: 200px;
+    animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
