--- a/src/Components/Repositories.css
+++ b/src/Components/Repositories.css
@@ -9,6 +9,15 @@ h1 {
     text-align: center;
 }
 
+
+h2 {
+    text-align: center;
+}
+
+h3 {
+    text-align: left;
+}
+
 input[type="text"] {
     background-color: #333;
     color: #ffffff;
