--- a/src/Components/Repositories.css
+++ b/src/Components/Repositories.css
@@ -114,3 +114,8 @@ li:hover {
     margin-bottom: 10px; /* space between bullet points */
     font-size: 16px; /* adjust size as needed */
 }
+
+.keyword {
+    font-weight: bold;
+    font-size: 1.1em; /* Adjust the size as needed */
+}
